// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sentry processor integrated 1`] = `
Array [
  Array [
    [Error: fake],
    Object {
      "level": "error",
    },
  ],
  Array [
    [Error: fake],
    Object {
      "level": "error",
    },
  ],
  Array [
    [Error: fake],
    Object {
      "level": "error",
    },
  ],
]
`;

exports[`Sentry processor module 1`] = `
Array [
  Array [
    [Error],
    Object {
      "level": "error",
      "tags": Object {
        "admin": true,
      },
      "user": Object {
        "id": "1234",
      },
    },
  ],
]
`;

exports[`Sentry processor processor attached 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:77:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:78:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:79:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:82:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:83:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "fake",
          "name": "Error",
          "stack": "Error: fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/sentry.test.js:84:22)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)",
        },
      },
      "err": [Error: fake],
      "level": 50,
      "msg": "fake",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;
